# orbital-os

./: .gitignore  Cargo.toml  Makefile  README.md  build.ps1  rust-toolchain.toml
.cargo/: config.toml
.cursor/commands/: create-zero-app.md  rules.md
.cursor/plans/: fix_storage_invariant_violations_89eb79e6.plan.md  init_pid0_boot_57ca5961.plan.md  userspace_layer_and_users_d7a71c0f.plan.md
apps/orbital-web/src/: background.rs  lib.rs
apps/orbital-web/www/: index.html  main.tsx  package-lock.json  package.json  vite.config.ts
crates/orbital-axiom/src/: commitlog.rs  lib.rs
crates/orbital-desktop/src/: wasm.rs
crates/orbital-desktop/tests/: integration.rs
crates/orbital-hal-mock/src/: lib.rs
crates/orbital-hal/src/: lib.rs
crates/orbital-init/src/: lib.rs
crates/orbital-kernel/src/: lib.rs
crates/orbital-process/src/: lib.rs
crates/orbital-terminal/src/: lib.rs
crates/orbital-wasm-rt/src/: lib.rs
crates/orbital-web/: Cargo.toml
crates/orbital-web/src/: background.rs  lib.rs
crates/zos-allocator/src/: lib.rs
crates/zos-apps/: Cargo.toml
crates/zos-apps/src/: app.rs  error.rs  lib.rs  manifest.rs  runtime.rs  vfs_async.rs
crates/zos-apps/tests/: identity_integration.rs  vfs_integration.rs
crates/zos-axiom/src/: capability.rs  lib.rs
crates/zos-boot/: Cargo.toml
crates/zos-boot/src/: allocator.rs  lib.rs  main.rs
crates/zos-desktop/: Cargo.toml
crates/zos-desktop/src/: error.rs  lib.rs  types.rs  viewport.rs  wasm.rs
crates/zos-desktop/tests/: identity_integration.rs  integration.rs
crates/zos-hal/: Cargo.toml
crates/zos-hal/src/: lib.rs
crates/zos-hal/src/x86_64/: apic.rs  gdt.rs  interrupts.rs  mod.rs  pci.rs  rtc.rs  serial.rs  storage.rs
crates/zos-hal/src/x86_64/virtio/: blk.rs  blk_pci.rs  mod.rs  pci.rs  queue.rs  transport.rs
crates/zos-hal/src/x86_64/vmm/: address_space.rs  frame_allocator.rs  mod.rs  page_table.rs  tlb.rs
crates/zos-hal/src/x86_64/wasm/: host.rs  mod.rs  process.rs
crates/zos-identity/: Cargo.toml
crates/zos-identity/src/: client.rs  crypto.rs  error.rs  ipc.rs  keystore.rs  lib.rs  serde_helpers.rs  service.rs  session.rs  types.rs
crates/zos-identity/src/ipc/: zid.rs
crates/zos-init/: Cargo.toml
crates/zos-init/src/: bootstrap.rs  lib.rs  registry.rs
crates/zos-init/src/handlers/: mod.rs  service.rs  supervisor.rs
crates/zos-ipc/: Cargo.toml
crates/zos-ipc/src/: lib.rs
crates/zos-kernel/: Cargo.toml
crates/zos-kernel/src/: capability.rs  dispatch.rs  error.rs  ipc.rs  kernel.rs  lib.rs  replay.rs  syscall.rs  types.rs
crates/zos-kernel/tests/: kernel_tests.rs
crates/zos-process/: Cargo.toml
crates/zos-process/src/: lib.rs  random.rs
crates/zos-process/src/syscalls/: deprecated.rs  keystore.rs  mod.rs  network.rs  storage.rs
crates/zos-services/: Cargo.toml
crates/zos-services/src/: lib.rs  manifests.rs
crates/zos-services/src/services/: mod.rs
crates/zos-services/src/services/identity/: keystore_dispatch.rs  keystore_helpers.rs  mod.rs  network.rs  network_dispatch.rs  pending.rs  response.rs  tests.rs  utils.rs  vfs_dispatch.rs  vfs_helpers.rs
crates/zos-services/src/services/identity/handlers/: keys.rs  session.rs
crates/zos-services/src/services/identity/pending/: network.rs  storage.rs
crates/zos-services/src/services/keystore/: mod.rs  types.rs
crates/zos-services/src/services/keystore/handlers/: mod.rs
crates/zos-services/src/services/network/: mod.rs
crates/zos-services/src/services/permission/: mod.rs
crates/zos-services/src/services/time/: mod.rs
crates/zos-services/src/services/vfs/: mod.rs
crates/zos-services/src/services/vfs/handlers/: write.rs
crates/zos-supervisor-web/: Cargo.toml
crates/zos-supervisor-web/src/: background.rs  hal.rs  lib.rs  pingpong.rs  vfs.rs  worker.rs
crates/zos-supervisor/src/: background.rs  constants.rs
crates/zos-system-procs/src/: lib.rs
crates/zos-vfs/: Cargo.toml
crates/zos-vfs/src/: bootstrap.rs  client.rs  error.rs  indexeddb.rs  ipc.rs  lib.rs  memory.rs  memory_tests.rs  path.rs  service.rs  storage.rs
crates/zos-vfs/src/client/: keystore_async.rs  mod.rs
crates/zos-vfs/src/core/: types.rs
crates/zos-vfs/src/service/: permissions.rs
docs/: ENROLLMENT_FIX_SUMMARY.md  NEURAL_KEY_CRYPTO_CLEANUP.md  ZID_CRYPTO_INTEGRATION_COMPLETE.md  ZID_CRYPTO_INTEGRATION_SUMMARY.md  identity-storage-paths.md  zid-enrollment-payload.md
docs/implementation/: orbital-web-deprecation.md
docs/implementation/phase-1-wasm/: README.md  stage-1.5-init-services.md
docs/invariants/: invariants.md
docs/spec/: README.md
docs/spec/08-desktop/: 01-api.md  11-engineering.md  12-acceptance.md  README.md
docs/spec/v0.1.0/: README.md  USERSPACE.md
docs/spec/v0.1.3/: 00-boot.md  01-hal.md  02-kernel.md  03-axiom.md  04-init-supervisor.md  05-identity.md  06-services.md  07-drivers.md  08-applications.md  09-desktop.md  README.md
tools/bootimage/: Cargo.toml
tools/bootimage/src/: main.rs
tools/dev-server/src/: main.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
web/apps/PermissionsApp/: PermissionsApp.module.css  (+1 more)
web/desktop/: index.html  main.tsx  types.ts
web/processes/: calculator.wasm  clock.wasm  identity.wasm  identity_service.wasm  idle.wasm  init.wasm  keystore.wasm  keystore_service.wasm  memhog.wasm  permission.wasm  permission_manager.wasm  permission_service.wasm  pingpong.wasm  receiver.wasm  sender.wasm  settings.wasm  terminal.wasm  time.wasm  time_service.wasm  vfs.wasm  vfs_service.wasm
web/public/: axiom-storage.js  vfs-storage.js  worker.js  zos-keystore.js  zos-network.js  zos-storage.js
web/services/: IdentityServiceClient.ts  TimeServiceClient.ts  VfsStorageClient.ts  index.ts
web/stores/: desktopStore.ts  identityStore.ts  index.ts  machineKeysStore.ts  permissionStore.ts  settingsStore.ts  types.ts  windowStore.ts
web/styles/: global.css
web/test/: setup.ts
(+252 files in other folders)
