[package]
name = "zos-hal"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hardware Abstraction Layer trait for Zero OS"

[features]
default = []
std = []
# x86_64 platform support (for QEMU and bare metal)
x86_64 = [
    "dep:x86_64",
    "dep:uart_16550",
    "dep:spin",
    "dep:linked_list_allocator",
    "dep:wasmi",
]

[dependencies]
# x86_64 dependencies (optional, enabled by x86_64 feature)
x86_64 = { workspace = true, optional = true }
uart_16550 = { workspace = true, optional = true }
spin = { workspace = true, optional = true }
linked_list_allocator = { workspace = true, optional = true }

# WASM runtime for executing service binaries on x86_64
wasmi = { version = "0.36", default-features = false, optional = true }
