[package]
name = "zos-services"
version = "0.1.0"
edition = "2021"
description = "System services for Zero OS - Identity, VFS, Time, Network, and Permission services"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "identity"
path = "src/bin/identity.rs"

[[bin]]
name = "vfs"
path = "src/bin/vfs.rs"

[[bin]]
name = "time"
path = "src/bin/time.rs"

[[bin]]
name = "network"
path = "src/bin/network.rs"

[[bin]]
name = "permission"
path = "src/bin/permission.rs"

[[bin]]
name = "keystore"
path = "src/bin/keystore.rs"

[dependencies]
zos-apps = { path = "../zos-apps" }
zos-process = { path = "../zos-process" }
zos-identity = { path = "../zos-identity" }
zos-ipc = { path = "../zos-ipc" }
zos-network = { path = "../zos-network" }
zos-vfs = { path = "../zos-vfs" }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
uuid = { version = "1.20", default-features = false }
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]

[features]
default = []
